--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,11 @@
 @charset "utf-8";
 
+/* common */
+.section_title { font-size: 1.5rem; }
 
 /* icn */
+.icn { display: inline-block; }
+
 header .icn_hamburger { position: relative; display: inline-block; margin-right: .5rem;  width: 1.2rem; height: 1rem; }
 header .icn_hamburger .burger { position: absolute; left: 0; width: 100%; height: 2px; border-radius: 15px; -webkit-transition: background-color .2s; transition: background-color .2s; background: #000; }
 header .icn_hamburger .burger_top { top: 0; }
@@ -19,6 +23,7 @@ header .icn_close::after { transform: rotate3d(0, 0, 1, -45deg);}
 .icn_facebook { background-position: 0 -6.25rem; }
 .icn_naver { background-position: 0 -9.375rem; }
 .icn_apple { background-position: 0 -12.5rem; }
+
 
 /* header */
 header { position: relative; width: 100%; height: 3.75rem; }
@@ -81,7 +86,6 @@ header.open .gnb_dimmed { z-index: 99; background: rgba(0, 0, 0, 0.5); }
 .info_wrap { margin: 4rem auto; padding: 0 1.5rem; width: 100%; max-width: 80rem;}
 
 .info_wrap .info_top { display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 2rem; }
-.info_wrap .info_top h2 { font-size: 1.5rem; }
 .info_wrap .btn_wrap { display: flex; justify-content: space-between; align-items: center; } 
 .info_wrap .btn_wrap a { font-size: .9rem; }
 .info_wrap .btn_wrap a:last-child { margin-left: 2rem; }
@@ -113,6 +117,61 @@ header.open .gnb_dimmed { z-index: 99; background: rgba(0, 0, 0, 0.5); }
 
 .info_wrap .login_support { display: flex; justify-content: space-between; }
 .info_wrap .login_support a { font-size: .75rem; color: #737373; }
+.info_wrap .login_support a:last-child { margin-left: .5rem; }
+
+/* game_wrap */
+.game_wrap { margin: 4rem auto; padding: 0 1.5rem; width: 100%; max-width: 80rem;}
+
+.game_top { position: relative; display: flex; justify-content: space-between; width: 100%; margin-bottom: 2rem; }
+
+.view_type { position: absolute; left: 6rem; top: -10%; display: flex;}
+.view_type .btn { position: relative; display: flex; width: 30px; height: 30px; border: 1px solid #c3c3c3; background: #fff; transition: background-color .4s ease, border .4s ease; }
+
+/* type - ICON*/
+.type_thumbnail .view_type .btn.btn_thumbnail,
+.type_list .view_type .btn.btn_list { background: #000; border: 1px solid #000; }
+.type_thumbnail .view_type .btn.btn_thumbnail .btn_elem,
+.type_list .view_type .btn.btn_list .btn_elem { background: #fff; }
+
+/* type - thumbnail ICON */
+.thumbnail_dot { position: absolute; display:inline-block; width: 6px; height: 6px; background: #c3c3c3; transition: background-color .25s ease; }
+.thumbnail_dot:nth-child(1) { top: 6px; left: 6px; }
+.thumbnail_dot:nth-child(2) { top: 6px; right: 6px; }
+.thumbnail_dot:nth-child(3) { bottom: 6px; right: 6px; }
+.thumbnail_dot:nth-child(4) { bottom: 6px; left: 6px; }
+
+/* type - list ICON*/
+.list_bar { position: absolute; left: 50%; display: inline-block; transform: translate3d(-50%, -50%, 0); width: 18px; height: 3px; background: #c3c3c3; transition: background-color .25s ease; }
+.list_bar:nth-child(1) { top: 25%; }
+.list_bar:nth-child(2) { top: 50%; }
+.list_bar:nth-child(3) { top: 75%; }
+
+/* search box */
+.search_box { position: relative; }
+.search_box input { padding: .75rem .5rem; width: 15rem; font-size: .875rem; color: #737373; border: none; border-bottom: 1px solid #737373; transition: color .25s ease, border .25s ease; }
+.search_box input::placeholder { color: #737373; transition: color .25s ease; }
+.search_box input:active, .search_box input:active::placeholder,
+.search_box input:focus, .search_box input:focus::placeholder,
+.search_box input:hover, .search_box input:hover::placeholder { color: #000; border-bottom-color: #000; }
+
+.btn_search { position: absolute; top: calc(50% - 12.5px); right: 0; display: block; width: 25px; height: 25px; }
+.btn_search::before { content: ''; position: absolute; top: 0; left: 0; width: 50%; height: 50%; border: 3px solid #c3c3c3; border-radius: 50%; transition: border .25s ease; }
+.btn_search::after { content: ''; position: absolute; top: 65%; left: 55%; width: 31%; height: 3px; background: #c3c3c3; transform: rotate3d(0, 0, 1, 45deg); transition: background-color .25s ease;}
+
+.input_search:active + .btn_search::before,
+.input_search:focus + .btn_search::before,
+.input_search:hover + .btn_search::before { border-color: #000; }
+.input_search:active + .btn_search::after,
+.input_search:focus + .btn_search::after,
+.input_search:hover + .btn_search::after { background: #000; }
+.search_box .btn_search:hover::before { border-color: #07f; }
+.search_box .btn_search:hover::after { background: #07f; }
+
+.filter_list { display: flex; justify-content: flex-start; align-items: center; width: 100%; padding: 1rem 2rem; box-shadow: 0 0 10px rgba(0, 0, 0, .1); }
+.filter_item { margin-right: 1.5rem; }
+.filter_item button { padding: .5rem 2rem; color: #737373; transition: color .25s ease; }
+.filter_item:hover button { color: #07f; }
+.filter_item.on button { background: #000; color: #fff; }
 
 /* hover */
 @media (min-width: 1025px) {
@@ -125,16 +184,21 @@ header.open .gnb_dimmed { z-index: 99; background: rgba(0, 0, 0, 0.5); }
 
     header .gnb_service_all:hover { background: #07f; }
     header .helpcenter:hover { color: #fff; background: #737373; }
+
     /* icn */
     header .icn_close:hover::before,
     header .icn_close:hover::after { background: #07f; }
     header .icn_close:hover::before { transform: rotate3d(0, 0, 1, 135deg); }
     header .icn_close:hover::after { transform: rotate3d(0, 0, 1, 45deg); }
+
+    /* game_wrap */
+    .view_type .btn:hover { border: 1px solid #07f; }
+    .view_type .btn:hover .btn_elem { background: #07f; }
 }
 
 /* animation */
 @keyframes gameTabSlide { 
-    0% { transform: translate3d(100%, -7%, 0); box-shadow: -5px 15px 15px rgba(0, 0, 0, 0.1); }
-    85% { transform: translate3d(1%, -7%, 0); box-shadow: -5px 15px 15px rgba(0, 0, 0, 0.1); }
+    0% { transform: translate3d(100%, -5%, 0); box-shadow: -30px 10px 15px rgba(0, 0, 0, 0.5); }
+    85% { transform: translate3d(1%, -5%, 0); box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5); }
     100% { transform: translate3d(0, 0, 0); box-shadow: none; } 
 }
