--- a/css/index.css
+++ b/css/index.css
@@ -98,9 +98,16 @@ header.open .gnb_dimmed { z-index: 99; background: rgba(0, 0, 0, 0.5); }
 main { overflow-x: hidden; }
 
 /* banner section */
-.banner_wrap { position: relative; z-index: 3; overflow: hidden; }
-.banner_wrap .owl-dots { position: absolute; bottom: 0; left: 50%; z-index: 1; display: flex; justify-self: center; transform: translate3d(-50%, 0, 0); }
-.banner_wrap .owl-dot { width: 15.9375rem; height: 4rem; background: rgba(255, 255, 255, .4); }
+.banner_wrap { position: relative; z-index: 3; }
+.banner_wrap .owl-dots { position: absolute; bottom: -4rem; left: 50%; z-index: 1; display: flex; justify-self: center; transform: translate3d(-50%, 0, 0); }
+.banner_wrap .owl-dot { position: relative; width: 15.9375rem; height: 4rem; }
+.banner_wrap .owl-dot::before { content: ''; position: absolute; z-index: -1; width: 100%; height: 100%; opacity: .4; background: no-repeat center / cover; }
+.banner_wrap .owl-dot.active::before { opacity: .4; }
+.banner_wrap .owl-dot.active + .owl-dot::before { opacity: 1; }
+.banner_wrap .owl-dot:nth-child(1)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/202012/11/C48K2D3ERF9CXYFU20201211010830972.jpg"); }
+.banner_wrap .owl-dot:nth-child(2)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20212/26/9EFKZ7YRZ6AZXM3220210226052125126.jpg"); }
+.banner_wrap .owl-dot:nth-child(3)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20209/8/MMYPV8QO5YRX0F7820200908081836459.jpg"); }
+.banner_wrap .fake-dot { position: absolute; top:0; left:0; width: 15.9375rem; height: 4rem; background: url(https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/202012/11/C48K2D3ERF9CXYFU20201211010830972.jpg) no-repeat center / cover; }
 .banner_wrap .slider_button { width: 100%; height: 100%; }
 
 /* info section */
@@ -225,7 +232,8 @@ main { overflow-x: hidden; }
 
 /* mobile game */
 .mobile_list { display: flex; flex-wrap: wrap; align-items: flex-start; width: 104%; margin-left: -2%; }
-.mobile_item {  width: 21%; margin: 0 2% 4%; box-shadow: 0 0 10px rgba(0, 0, 0, .15); }
+.mobile_item { display: none; width: 21%; margin: 0 2% 4%; box-shadow: 0 0 10px rgba(0, 0, 0, .15); }
+.mobile_item.on { display: block; }
 .mobile_item .item_wrap { display: flex; justify-content: flex-start; padding: 1rem; width: 100%; }
 .mobile_thumbnail { margin-right: .5rem; width: 5.125rem; border-radius: 25px; overflow: hidden; }
 .mobile_contents { position: relative; display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; width: calc(100% - 5.625rem); word-break: break-all; }
@@ -235,6 +243,7 @@ main { overflow-x: hidden; }
 .mobile_os { position: absolute; left: 0; bottom: 0; }
 
 /* type_list */
+.type_list .device_type { margin-bottom: 2rem; overflow: visible; }
 .type_list .pc_title::after, .type_list .pc_subtitle, .type_list .pc_filter { display: none; }
 .type_list .pc_item { box-shadow: none; }
 .type_list .pc_item > a { display: flex; justify-content: flex-start; align-items: center; }
@@ -298,6 +307,8 @@ footer { padding-bottom: 2rem; background: #222426; }
     .view_type .btn:hover { border: 1px solid #07f; }
     .view_type .btn:hover .btn_elem { background: #07f; }
 
+    .type_list .pc_item:hover .pc_title,
+    .type_list .mobile_item:hover .mobile_title { color: #07f; }
     .pc_item:hover .pc_thumbnail img { transform: scale3d(1, 1, 1);}
     .mobile_item:hover .icn_mobile { filter: grayscale(0); }
 
