--- a/css/index.css
+++ b/css/index.css
@@ -101,9 +101,10 @@ main { overflow-x: hidden; }
 .banner_wrap { position: relative; z-index: 3; }
 .banner_wrap .owl-dots { position: absolute; bottom: -4rem; left: 50%; z-index: 1; display: flex; justify-self: center; transform: translate3d(-50%, 0, 0); }
 .banner_wrap .owl-dot { position: relative; width: 15.9375rem; height: 4rem; }
-.banner_wrap .owl-dot::before { content: ''; position: absolute; z-index: -1; width: 100%; height: 100%; opacity: .4; background: no-repeat center / cover; }
-.banner_wrap .owl-dot.active::before { opacity: .4; }
+.banner_wrap .owl-dot::before { content: ''; position: absolute; z-index: -1; width: 100%; height: 100%; opacity: .4; background: no-repeat center / cover; transition: opacity 8s; }
+.banner_wrap .owl-dot.active::before { opacity: .3; }
 .banner_wrap .owl-dot.active + .owl-dot::before { opacity: 1; }
+.banner_wrap .owl-dot.anima::before { opacity: 1; }
 .banner_wrap .owl-dot:nth-child(1)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/202012/11/C48K2D3ERF9CXYFU20201211010830972.jpg"); }
 .banner_wrap .owl-dot:nth-child(2)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20212/26/9EFKZ7YRZ6AZXM3220210226052125126.jpg"); }
 .banner_wrap .owl-dot:nth-child(3)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20209/8/MMYPV8QO5YRX0F7820200908081836459.jpg"); }
