--- a/css/index.css
+++ b/css/index.css
@@ -99,20 +99,19 @@ main { overflow-x: hidden; }
 
 /* banner section */
 .banner_wrap { position: relative; z-index: 3; }
-.banner_wrap .owl-dots { position: absolute; bottom: -4rem; left: 50%; z-index: 1; display: flex; justify-self: center; transform: translate3d(-50%, 0, 0); }
-.banner_wrap .owl-dot { position: relative; width: 15.9375rem; height: 4rem; }
-.banner_wrap .owl-dot::before { content: ''; position: absolute; z-index: -1; width: 100%; height: 100%; opacity: .4; background: no-repeat center / cover; transition: opacity 8s; }
-.banner_wrap .owl-dot.active::before { opacity: .3; }
-.banner_wrap .owl-dot.active + .owl-dot::before { opacity: 1; }
-.banner_wrap .owl-dot.anima::before { opacity: 1; }
+.banner_wrap .owl-dots { position: absolute; bottom: -3.99rem; left: 0; z-index: 1; width: 100%; height: 4rem; display: flex; justify-self: center; }
+.banner_wrap .owl-dot { position: relative; width: 33.33%; height: 100%; overflow: hidden; }
+.banner_wrap .owl-dot::before { content: ''; position: absolute; top: 50%; left: 50%; z-index: -1; width: 110%; height: 100%; filter: grayscale(1); background: no-repeat center / cover; transform: translate3d(-50%, -50%, 0); transition: filter .5s, width .5s; }
+.banner_wrap .owl-dot.active::before { filter: grayscale(0); width: 100%; }
+.banner_wrap .owl-dot.active + .owl-dot::before { filter: grayscale(.6); }
+.banner_wrap .owl-dot.anima::before { filter: grayscale(.6); }
 .banner_wrap .owl-dot:nth-child(1)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/202012/11/C48K2D3ERF9CXYFU20201211010830972.jpg"); }
 .banner_wrap .owl-dot:nth-child(2)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20212/26/9EFKZ7YRZ6AZXM3220210226052125126.jpg"); }
 .banner_wrap .owl-dot:nth-child(3)::before { background-image: url("https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20209/8/MMYPV8QO5YRX0F7820200908081836459.jpg"); }
-.banner_wrap .fake-dot { position: absolute; top:0; left:0; width: 15.9375rem; height: 4rem; background: url(https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/202012/11/C48K2D3ERF9CXYFU20201211010830972.jpg) no-repeat center / cover; }
 .banner_wrap .slider_button { width: 100%; height: 100%; }
 
 /* info section */
-.info_wrap { margin: 4rem auto; width: 100%; max-width: 80rem; }
+.info_wrap { margin: 6rem auto 4rem; width: 100%; max-width: 80rem; }
 
 .info_wrap .info_top { display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 2rem; }
 .info_wrap .btn_wrap { display: flex; justify-content: space-between; align-items: center; } 
@@ -175,7 +174,7 @@ main { overflow-x: hidden; }
 .thumbnail_dot:nth-child(3) { bottom: 6px; right: 6px; }
 .thumbnail_dot:nth-child(4) { bottom: 6px; left: 6px; }
 
-/* type - list ICON*/
+/* type - list ICON */
 .list_bar { position: absolute; left: 50%; display: inline-block; transform: translate3d(-50%, -50%, 0); width: 18px; height: 3px; background: #c3c3c3; transition: background-color .25s ease; }
 .list_bar:nth-child(1) { top: 25%; }
 .list_bar:nth-child(2) { top: 50%; }
